# zk-genomics

./: .gitignore
alignment-circuits/: Cargo.toml
alignment-circuits-arkworks/: Cargo.toml
alignment-circuits-dorian/: Cargo.toml  README.md
alignment-circuits-dorian/src/: lib.rs
alignment-circuits-dorian/src/create_input/: create_input.rs  prover_input.rs  verifier_input.rs
alignment-circuits-dorian/src/right_field_arithmetic/: alloc.rs
alignment-circuits/src/: lib.rs
