[package]
name = "alignment-circuits"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-crypto-primitives = { version = "0.4.0" }
ark-r1cs-std = { version = "0.4" }
ark-relations = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
jemallocator = { version = "0.5" }
ark-bls12-381 = { version = "0.4", features = ["std"] }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false } 
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
rayon = { version = "1.5.1", default-features = false, optional = true }
sha2 = "0.10.8"
rand = { version = "0.8", features = ["std"]}
tracing-subscriber = "0.2.25"
tracing = "0.1.41"

itertools = "0.13"
p3-baby-bear = "0.2.0"
p3-commit = "0.2.0"
p3-field = "0.2.0"
p3-matrix = "0.2.0"
p3-poseidon2 = "0.2.0"
p3-symmetric = "0.2.0"
p3-merkle-tree = "0.2.0"
rand_chacha = "0.3.1"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-serialize/std", "ark-bls12-381/std", "ark-crypto-primitives/sponge", "ark-crypto-primitives/r1cs"  ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-serialize/std", "rayon"]
asm = ["ark-ff/asm"]
print-trace = [ "ark-std/print-trace" ]
